[fix] fix flexbox layout to work on mobile and safari, fix #44 and #24

--- a/src/scripts/components/_ui/card/card.scss
+++ b/src/scripts/components/_ui/card/card.scss
@@ -40,12 +40,29 @@
   &:first-of-type {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+    border-bottom-left-radius: $radius-standard;
   }
   &:last-of-type {
+    border-top-right-radius: $radius-standard;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
   }
 }
+@media (max-width: 850px) {
+  .card--merged {
+    &:first-of-type {
+      border-top-right-radius: $radius-standard;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    &:last-of-type {
+      border-top-right-radius: 0;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: $radius-standard;
+    }
+  }
+}
+
 .card--default {
   background: $color-primary-3;
 }
