--- a/src/scripts/components/_ui/card/cardContainer.scss
+++ b/src/scripts/components/_ui/card/cardContainer.scss
@@ -21,12 +21,10 @@
 .card-container {
   display: flex;
   flex-direction: row;
-  flex: 0 0 100%;
-  height: 100%;
-  //overflow: auto;
   align-items: center;
   justify-content: center;
   align-content: stretch;
+  flex: 1 0 auto;
 }
 .card-container--wrap {
   flex-wrap: wrap;
